--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
 #exchangeForm {
     height: 1.5em;
+    display: flow;
 }
 
 input, select {
@@ -35,4 +36,7 @@ input:disabled {
 
 select {
     margin-left: 3px;
+}
+h1 {
+font-size: 3em;
 }
